hopefully fix horrifying stretchy biden

--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -370,6 +370,7 @@ input[type="range"]::-moz-range-thumb {
 #img-stats-wrapper img {
     margin-top: 20px;
     width: 100px;
+    height: auto;
     border-radius: 5px;
     vertical-align: middle;
     border: 6px solid;
